@@ -1,16 +1,15 @@
 <?xml version="1.0" standalone="no"?>
 <omf>
  <resource>
-  <creator>sean@inwords.co.za (Sean Wheller)</creator>
-  <title>Update Manager Manual</title>
+  <creator>sean@inwords.co.za (Sean Wheller) </creator>
+  <title>Update Manager Manual </title>
   <date>2005-03-04 </date>
   <version identifier="0.0.1" date="2005-03-04" description="First Release"/>
-  <subject category="Applications"/>
-  <description> Keep the software on your system up-to-date.</description>
+  <subject category="System|Administration"/>
+  <description> This document explains how to use the Update Manager. </description>
   <type>manual </type>
   <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
-  <identifier
-  url="file:/usr/share/gnome/help/update-manager/C/update-manager.xml"/>
+  <identifier url=""/>
   <language code="C"/>
   <relation seriesid="e7ae3bcc-8ce0-11d9-8fa9-d1fb3a9076bb"/>
   <rights type="GNU FDL" license.version="1.1" license="http://www.gnu.org/licenses/fdl.html"
