@@ -3,6 +3,8 @@ update-manager (0.42.2ubuntu15) dapper; urgency=low
   * disable the install button if there no updates
   * show main window after restoring the size
   * fix broken spelling, typos (ubuntu: #42431, #28777)
+  * help/C: merged from the docteam svn (ubuntu: 36092)
+    
 
  --
 
